[package]
name = "yukina"
version = "0.1.0"
edition = "2021"
description = "YUKI-based Next-generation Async-cache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
humansize = "2.1.3"
indicatif = "0.17.8"
ipnetwork = "0.20.0"
parse-size = "1.0.0"
regex = "1.10.4"
reqwest = "0.12.2"
sled = "0.34.7"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"
walkdir = "2.5.0"
shadow-rs = "0.26.1"

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }

[build-dependencies]
shadow-rs = "0.26.1"
