[package]
name = "yukina"
version = "0.20250828.0"
edition = "2021"
description = "YUKI-based Next-generation Async-cache"
default-run = "yukina"
license = "MIT"
repository = "https://github.com/taoky/yukina"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
humansize = "2.1.3"
kyuri = "0.2.6"
ipnetwork = "0.20.0"
parse-size = "1.0.0"
regex = "1.10.4"
reqwest = { version = "0.12.9", default-features = false, features = ["stream", "socks", "rustls-tls-native-roots", "http2"] }
sled = "0.34.7"
tokio = { version = "1.43.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
walkdir = "2.5.0"
shadow-rs = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
humantime = "2.1.0"
futures-util = "0.3.31"
filetime = "0.2.23"
percent-encoding = "2.3.1"
serde_json = "1.0.145"

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }

[build-dependencies]
shadow-rs = "0.26.1"
